--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
         "rinvex/countries": "^9.0",
         "symfony/intl": "^7.1"
     },
