--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "mcamara/laravel-localization": "^2.0",
         "pusher/pusher-php-server": "^7.2",
         "rinvex/countries": "^9.0",
         "symfony/intl": "^7.1"
