--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "laravel/fortify": "^1.19",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.7",
         "mcamara/laravel-localization": "^2.0",
         "pusher/pusher-php-server": "^7.2",
         "rinvex/countries": "^9.0",
+        "stripe/stripe-php": "^16.3",
         "symfony/intl": "^7.1"
     },
     "require-dev": {
